--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -499,6 +499,7 @@
   <script src="{{ url_for('static', filename='js/sidebar.js', v=2) }}"></script>
   <script src="{{ url_for('static', filename='js/recently-removed.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='js/fancool.js', v=10) }}"></script>
+  <script src="{{ url_for('static', filename='js/fancool-search.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
   
 </body>
