--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -557,7 +557,20 @@
     <div class="container mx-auto px-4 py-2 text-sm flex flex-col md:flex-row gap-2 md:gap-4 md:items-center justify-between">
       <div class="flex flex-col md:flex-row md:items-center gap-2 md:gap-6">
         <span>© {{ current_year or 2025 }} 风扇库</span>
-        <span class="opacity-70">沪ICP备2025145529号-1</span>
+        <a 
+          href="https://beian.mps.gov.cn/#/query/webSearch?code=31011402021508" 
+          rel="noreferrer" 
+          target="_blank"
+          style="display: inline-flex; align-items: center; "
+        >
+          <img 
+            src="{{ url_for('static', filename='imgs/beian.png') }}" 
+            alt="备案图标" 
+            style="width: 16px; height: 16px; margin-right: 5px; "
+          > 
+          沪公网安备31011402021508号
+        </a>
+        <span>沪ICP备2025145529号-1</span>
         <span>交流及反馈QQ群：1070155380</span>
         <a href="https://github.com/CuriousPiPi/FancoolWeb.git" data-track-id="link_github_open_source" class="underline hover:text-blue-600">GitHub代码开源</a>
       </div>
