提升版本号

--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -22,9 +22,9 @@
   <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.5.2/css/solid.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/tailwind.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/chart-renderer.css', v=1) }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css', v=6) }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css', v=7) }}">
   <!-- bumped v to 4 to refresh new styles (fc-subrow__scenario-extra) -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/right-card.css', v=4) }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/right-card.css', v=5) }}">
 </head>
 <body class="bg-gray-50 min-h-screen">
   <div id="toastContainer"></div>
@@ -580,18 +580,18 @@
     </div>
   </footer>
   </main>
-  
-  <script src="{{ url_for('static', filename='js/local-state.js') }}"></script>
+
+  <script src="{{ url_for('static', filename='js/local-state.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='js/theme-pref.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='js/color-manager.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='vendor/echarts/5.4.2/echarts.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/chart-renderer.js', v=5) }}"></script>
-  <script src="{{ url_for('static', filename='js/sidebar.js', v=2) }}"></script>
-  <script src="{{ url_for('static', filename='js/recently-removed.js', v=1) }}"></script>
-  <script src="{{ url_for('static', filename='js/fancool.js', v=10) }}"></script>
-  <script src="{{ url_for('static', filename='js/right-panel.js', v=2) }}"></script>
-  <script src="{{ url_for('static', filename='js/fancool-search.js', v=1) }}"></script>
-  <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/sidebar.js', v=3) }}"></script>
+  <script src="{{ url_for('static', filename='js/recently-removed.js', v=2) }}"></script>
+  <script src="{{ url_for('static', filename='js/fancool.js', v=11) }}"></script>
+  <script src="{{ url_for('static', filename='js/right-panel.js', v=3) }}"></script>
+  <script src="{{ url_for('static', filename='js/fancool-search.js', v=2) }}"></script>
+  <script src="{{ url_for('static', filename='js/analytics.js', v=1) }}"></script>
   
 </body>
 </html>
